@@ -1,0 +1,19 @@
+Description:
+Binary mode I/O.
+
+Files:
+lib/binary-io.h
+
+Depends-on:
+
+configure.ac:
+
+Makefile.am:
+lib_SOURCES += binary-io.h
+
+Include:
+"binary-io.h"
+
+Maintainer:
+Bruno Haible
+
