@@ -1,3 +1,8 @@
+2003-04-02  Bruno Haible  <bruno@clisp.org>
+
+	* modules/binary-io: New file.
+	* MODULES.html.sh (func_all_modules): Add it.
+
 2003-04-01  Bruno Haible  <bruno@clisp.org>
 
 	* modules/pathname: New file.
